@@ -670,6 +670,38 @@ A default xref:replica-placement-plugins.adoc[replica placement plugin] can be d
 The `class` attribute should be set to the FQN (fully qualified name) of a class that extends `PlacementPluginFactory`.
 Sub-elements are specific to the implementation.
 
+=== The <clusterPluginsSource> Element
+The `<clusterPluginsSource>` element allows you to specify the class used to load cluster plugins.
+
+[source,xml]
+----
+<clusterPluginsSource class="org.apache.solr.api.ZkClusterPluginsSource"/>
+----
+
+The default cluster plugin source is `ZkClusterPluginsSource`, which allows the cluster plugins API to be used to maintain plugins.
+
+The `org.apache.solr.api.NodeConfigClusterPluginsSource` is also provided by solr, allowing cluster plugins to be declared in `solr.xml`.
+If this implementation is used, the `/custer/plugin` API can't be used to add, update or remove cluster plugins.
+
+The `NodeConfigClusterPluginsSource` only supports declaring `clusterSingleton` plugins in `solr.xml` at this time.
+
+
+=== The <clusterSingleton> Element
+If the `clusterPluginsSource` is set to `NodeConfigClusterPluginsSource` then one or more `clusterSingleton` elements can be declared.
+Each `clusterSingleton` element specifies a cluster plugin that should be loaded when Solr stars, along with it's associated configuration.
+
+[source,xml]
+----
+<clusterSingleton name="pluginName" class="qualified.plugin.class">
+  <int name="value1">20</int>
+</clusterSingleton>
+----
+
+The `name` attribute is required and must be unique for each `clusterSingleton`.
+
+The `class` attribute should be set to the FQN (fully qualified name) of a class that extends `ClusterSingleton`.
+Sub-elements are specific to the implementation, `value1` is provided as an example here.
+
 === The <metrics> Element
 
 The `<metrics>` element in `solr.xml` allows you to customize the metrics reported by Solr.
